[package]
name = "session_id"
version = "0.1.0"
authors = ["Henri Sundelin <henri.sundelin@iki.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = { version = "0.10.3", features = ["mac"] }
sha2 = "*"
base64 = "*"
rand = "0.5.0"
hex = "*"
log = "*"
rayon = "1.5"
simple_logger = "*"
